cluster/apps/deluge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  labels:
    app.kubernetes.io/name: deluge
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deluge
    spec:
      nodeSelector:
        devmem.ru/pve-host: spsrv
      containers:
        - name: deluge
          image: binhex/arch-delugevpn:2.2.0-7-08-libtorrentv1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8112
              protocol: TCP
            - name: daemon
              containerPort: 58846
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: wireguard
              mountPath: /config/wireguard
            - name: config
              mountPath: /config
            - name: nfs-downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 300m
              memory: 1280Mi
            limits:
              cpu: 2000m
              memory: 1536Mi
          securityContext:
            privileged: true
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/bash"
                  - "-c"
                  - |
                    sleep 30
                    iptables -A INPUT -s 10.244.0.0/16 -i eth0 -p tcp -m tcp --dport 58846 -j ACCEPT
                    iptables -A OUTPUT -d 10.244.0.0/16 -o eth0 -p tcp -m tcp --sport 58846 -j ACCEPT
      volumes:
        - name: wireguard
          secret:
            secretName: deluge-wireguard
        - name: config
          persistentVolumeClaim:
            claimName: deluge-config
        - name: nfs-downloads
          persistentVolumeClaim:
            claimName: nfs-downloads-pvc
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        sysctls:
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
