cluster/apps/deluge/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
  labels:
    app.kubernetes.io/name: deluge
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host deluge.home.devmem.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge
                port:
                  number: 8112
  tls:
    - hosts:
        - *host
